--- a/Module.csproj
+++ b/Module.csproj
@@ -1,13 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>net7.0</TargetFramework>
-		<Version>0.1.0</Version>
+		<TargetFramework>net8.0</TargetFramework>
+		<Version>1.0.1</Version>
 		<PackageId>A11d.Module</PackageId>
 		<Authors>A11d</Authors>
+		<Owners>A11d</Owners>
 		<Description>Domain-driven modules for ASP.NET minimal APIs.</Description>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageIcon>module.jpg</PackageIcon>
+		<!-- <PackageReadmeFile>README.md</PackageReadmeFile> Live readme files via GitHub are better -->
+		<PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
 		<PackageTags>Module, ASP.NET, Minimal API, Endpoint</PackageTags>
 		<RepositoryUrl>https://github.com/a11delavar/module</RepositoryUrl>
+		<PackageProjectUrl>http://github.com/a11delavar/module</PackageProjectUrl>
 		<Nullable>enable</Nullable>
 		<RestoreFallbackFolders>clear</RestoreFallbackFolders>
 		<DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
@@ -17,5 +22,10 @@
 
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<!-- <None Include="README.md" Pack="true" PackagePath="" /> -->
+		<None Include="module.jpg" Pack="true" PackagePath="" />
 	</ItemGroup>
 </Project>
